# Qubic

./: # Code Citations.md  .clang-format  .compliance-test  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc-qcmg  .ruff.toml  =3.9.0  ANCESTRYDNA_SEQUENCING_README.md  API_REFERENCE.md  ARCHITECTURE_FREEZE.md  ASI_SAFETY_ELICITATION_SUMMARY.md  BM_001_EXECUTION_SUMMARY.md  BM_001_IMPLEMENTATION_SUMMARY.md  BUILD_INSTRUCTIONS.md  CATEGORY_DEFINITION.md  CATEGORY_INDEX.md  CATEGORY_VISUAL_SUMMARY.md  CHANGELOG.md  CI_FIXES.md  CODE_OF_CONDUCT.md  COMMERCIALIZATION_STRATEGY.md  COMPLIANCE_ASSESSMENT_INDEX.md  COMPLIANCE_CERTIFICATION_ROADMAP.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_STATUS_CHECKLIST.md  COMPREHENSIVE_GENOME_ANALYSIS_README.md  CONTRIBUTING.md  CRITIQUE_SUMMARY.md  DECENTRALIZED_GHOST_MACHINE.md  DEFENSE_COMPLIANCE_SUMMARY.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_PRODUCTION_QRATUM.sh  DESKTOP_EDITION_EXECUTIVE_SUMMARY.md  DESKTOP_EDITION_README.md  (+219 more)
.devcontainer/: devcontainer.json
Aethernet/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_AUDIT_SUMMARY.md  run_juris_analysis.py  run_juris_legal_analysis.py
Aethernet/compliance/: bipa.rs
Aethernet/core/: __init__.py  consensus.py  federation.py  gdpr.rs  hipaa.rs  lib.rs  validator.py
Aethernet/core/biokey/: derivation.rs  mod.rs  zkp_verify.rs
Aethernet/core/ledger/: mod.rs
Aethernet/core/rtf/: enclave_main.rs  mod.rs
Aethernet/core/txo/: mod.rs
Aethernet/docs/: ARCHITECTURE.md
Aethernet/gateways/: microvm_sandbox.rs
Aethernet/monitoring/: anomaly_detection.rs
Aethernet/recovery/: multisig_recovery.rs
Aethernet/tests/: __init__.py  test_consensus.py  test_federation.py  test_validator.py
QuASIM/: CMakeLists.txt  Closure  Dockerfile.cuda  demo.cpp
QuASIM/.github/workflows/: build.yml
QuASIM/docs/: APPENDIX_ONERA_M6.tex
QuASIM/include/: quasim_core.h
QuASIM/onera/: benchmarks.csv
QuASIM/python/quasim/: __init__.py
QuASIM/src/: quasim_tensor_solve.cpp
QuASIM/src/cpp/: quasim_bindings.cpp
QuASIM/src/cuda/: anti_tensor.cu  ftq_kernels.cu  tensor_solve.cu  vjp.cu
chatgpt_scraper/: README.md  pyproject.toml
chatgpt_scraper/chatgpt_scraper/: __init__.py  __main__.py  cli.py  export_schema.md  loader.py  models.py  normalize.py
chatgpt_scraper/tests/: test_cli.py  test_loader.py  test_normalize.py
chatgpt_scraper/tests/data/export_dir/: conversations.json
crypto/kdf/: Cargo.toml  hkdf.rs  mod.rs
crypto/pqc/: Cargo.toml  README.md  crystals_dilithium.rs  crystals_kyber.rs  mod.rs  sphincs_plus.rs
crypto/rng/: Cargo.toml  drbg.rs  mod.rs
integrations/sdk/cpp/: CMakeLists.txt  quasim_client.hpp
nexus-omega/: Cargo.toml
nexus-omega/crates/nexus-core/: Cargo.toml
nexus-omega/crates/nexus-core/src/: config.rs  determinism.rs  error.rs  executor.rs  lib.rs  scheduler.rs  time.rs
nexus-omega/crates/sentinel-core/: Cargo.toml
nexus-omega/crates/sentinel-core/src/: config.rs  error.rs  lib.rs  shadow.rs
q-substrate/: .gitignore  BUILD.md  Cargo.toml  INTEGRATION.md  README.md
q-substrate/src/: audit.rs  config.rs  dcge.rs  lib.rs  main.rs  minilm.rs  quantum.rs  wasm_pod.rs
q-substrate/src/discovery/: cli.rs  engine.rs  fitness.rs  lattice.rs  mod.rs  provenance.rs  types.rs
qrVITRA/merkler-static/: Cargo.toml  build.sh
qrVITRA/merkler-static/injected/: cuda_ptx_hash.bin.readme  driver_manifest.bin.readme  epoch_pubkey_a.bin.readme  epoch_pubkey_b.bin.readme  merkler_self.bin.readme
qrVITRA/merkler-static/src/: biokey.rs  fido2.rs  main.rs  zkp.rs
qratum-rust/: Cargo.toml  README.md  SECURITY_SUMMARY.md
qratum-rust/docs/: LIFECYCLE.md
qratum-rust/examples/: ghost_machine_demo.rs  q_substrate_demo.rs
qratum-rust/src/: biokey.rs  blinded.rs  canary.rs  compliance.rs  consensus.rs  governance.rs  incentives.rs  ledger.rs  lib.rs  lifecycle.rs  p2p.rs  proxy.rs  q_substrate.rs  quorum.rs  snapshot.rs  transport.rs  txo.rs  upgrade.rs  watchdog.rs  zkstate.rs
qratum-rust/src/compliance_controls/: cmmc.rs  gdpr.rs  hipaa.rs  mod.rs
qratum_desktop/src-tauri/: Cargo.toml  tauri.conf.json
qratum_desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
qratum_desktop/src-tauri/src/backend/: database.rs  health.rs  kernel.rs  mod.rs  wasm_runtime.rs
qratum_desktop/src-tauri/src/codegen/: mod.rs
qratum_desktop/src-tauri/src/codegen/ast/: mod.rs
qratum_desktop/src-tauri/src/qr_os_supreme/: mod.rs
qratum_desktop/src-tauri/tests/: os_supreme_test.rs  performance_test.rs  size_test.rs
qubic-viz/: README.md  __init__.py  pyproject.toml
qubic-viz/adapters/: __init__.py  quasim_adapter.py  tire_data_adapter.py
qubic-viz/core/: __init__.py  camera.py  lighting.py  renderer.py  scene_graph.py
qubic-viz/engines/: __init__.py  deformation_engine.py  field_visualizer.py  mesh_generator.py  tire_renderer.py
qubic-viz/gpu/: __init__.py  compute_pipeline.py  kernels.py  memory_manager.py
qubic-viz/shaders/: stress_field.glsl  thermal_field.glsl  tire_surface.glsl
qubic-viz/tests/: __init__.py  test_adapters.py  test_mesh_generator.py  test_renderer.py
runtime/libquasim/: CMakeLists.txt
runtime/libquasim/include/: quasim.hpp
runtime/libquasim/src/: main.cpp  quasim.cpp  scheduler.cpp  telemetry.cpp
runtime/libquasim/tests/: quasim_tests.cpp
rust/qcore_vcs/: Cargo.toml  README.md
rust/qcore_vcs/src/: crdt.rs  git.rs  lib.rs  object_store.rs  vcs.rs
soi/rust_core/soi_telemetry_core/: .gitignore  Cargo.toml  build.sh  demo.sh
soi/rust_core/soi_telemetry_core/src/: lib.rs
tools/verify/: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
tools/verify/examples/: README.md  claims.yaml  verify.config.yaml
tools/verify/quasim_verify/: __init__.py  cli.py  io.py  models.py  registry.py
tools/verify/quasim_verify/checks/: __init__.py  audit_chain.py  comp_artifacts.py  comp_cmmc_map.py  doc_language_lint.py  econ_montecarlo.py  econ_phi_qevf.py  tech_benchmarks.py  tech_compression.py  tech_rl_convergence.py  tech_telemetry_rmse.py
(+3137 files in other folders)
