[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quasim"
version = "0.1.0"
description = "Quantum-Accelerated Simulation Runtime"
authors = [{name = "QuASIM Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "matplotlib>=3.7.0",
    "imageio>=2.0.0",
    "imageio-ffmpeg>=0.4.0",
    "plotly>=5.14.0",
    "kaleido>=0.2.1",
    "pandas>=2.0.0",
]
ownai = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
]
terc = [
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]
hcal = [
    "pyyaml>=6.0",
    "click>=8.0",
    "numpy>=1.24",
]
hcal-nvidia = [
    "nvidia-ml-py>=12.0",
]
hcal-amd = [
    "pyrsmi>=1.0",
]

[project.scripts]
quasim-hcal = "quasim.hcal.cli:main"
quasim-revultra = "quasim.cli.revultra_cli:cli"
quasim-qgh = "quasim.cli.qgh_cli:cli"
quasim-terc-obs = "quasim.cli.terc_obs_cli:cli"
quasim-own = "quasim.cli.quasim_own:cli"
qunimbus = "quasim.qunimbus.cli:main"
qnx = "qnx.cli:cli"
qstack = "qstack.launch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quasim*", "qnx*", "qstack*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "requires_hardware: marks tests as requiring physical hardware (deselect with '-m \"not requires_hardware\"')",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false


