[package]
name = "merkler-static"
version = "1.0.0"
edition = "2021"
authors = ["QRATUM Project <contact@qratum.ai>"]
description = "VITRA-E0 Biokey-Enabled Merkle Chain Builder for Sovereign Genomics"
license = "Apache-2.0"

[dependencies]
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

[features]
default = ["biokey"]
biokey = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "merkler-static"
path = "src/main.rs"
