[package]
name = "qratum-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", default-features = false, features = ["wry", "system-tray", "window-close", "window-hide", "window-set-focus", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
wasmtime = { version = "16", default-features = false, features = ["cranelift"] }
log = "0.4"
bincode = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = "z"          # Optimize for size (not speed)
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Don't include unwinding code
strip = true             # Strip debug symbols
