[package]
name = "qcore_vcs"
version = "0.1.0"
edition = "2021"
authors = ["QuASIM Team"]
license = "Apache-2.0"
description = "Universal VCS engine with CRDT overlays for conflict-free collaboration"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
