[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quasim-verify"
version = "0.1.0"
description = "QuASIM × QuNimbus claim and compliance verification"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
quasim-verify = "quasim_verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quasim_verify*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901"]
