[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SENTINEL Zero Layer Meta-Substrate"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
parking_lot = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
